--- a/content/projects/almor.mdx
+++ b/content/projects/almor.mdx
@@ -1,7 +1,7 @@
 ---
 title: Alex Morariu
 description: The website you're looking at
-repository: chronark/chronark.com
+repository: almor.com
 url: https://chronark.com
 date: 2025-01-01
 published: true
