--- a/content/projects/nvid.mdx
+++ b/content/projects/nvid.mdx
@@ -2,8 +2,8 @@
 title: "NVIDIA Stock Predictor"
 description: "Uses Python Libraries such as Keras, Pandas, Numpy, Tensorflow, Pytorch"
 date: "2025-01-02"
-repository: "https://github.com/https://github.com/morariua/NVIDEA-STOCK"
-url: "https://github.com/https://github.com/morariua/NVIDEA-STOCK"
+repository: "https://github.com/morariua/NVIDEA-STOCK"
+url: "/https://github.com/morariua/NVIDEA-STOCK"
 ---
 
 ## Overview 
